--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.18"
